--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
-    <title>Rust WASM Boilerplate</title>
+    <link rel="shortcut icon" href="/favicon.ico" />
+
+    <title>China Chhess - WASM</title>
   </head>
 
   <body>
